[] Fixed crash if renaming an entry to one that already exists.

Changes to Existing Features in 3.17.2
======================================
New toolbar icon set has been replaced with icons based on famfamfam's
silk set.

New Features for 3.17.2
=======================
[2793280] Browse+Autotype added to allowed double click actions.
[] Implement Virtual Keyboards for pass-phrase entry.

Bugs fixed in 3.17.1
====================
[2779705] Reserved shortcuts (Ctrl+Q, Alt+F4 and F1) now work.

Bugs fixed in 3.17
==================
[2750090] Using SaveAs now unlocks original database on successful
completion of the save.
[2689144] PWS no longer goes into a loop if the main menu has not yet
been displayed when accessing the recent entries via the system tray icon.
[2664657] Installer now prompts for elevation to administrator rights
on Windows Vista.
[2664703] Load base locale DLL if can't find a specific sub-locale version.
[2657132] View Reports no longer causes application crash.
[] Correct DragBar bitmaps for a new database.

Changes to Existing Features in 3.17
====================================
[] When doing a Browse to URL, the password of the current entry is
copied to the clipboard. This is action is not performed if the Browse
is invoked from the Edit dialog box.
[] Shortcut 'Ctrl+B' (Manage Menu->Backup) has been removed. Shortcut
'Ctrl+R' (Manage Menu->Restore) has been re-assigned to the new "Run
Command" function.

New Features for 3.17
=====================
[1954166] New preference to control word wrap in the Notes field in
Add & Edit. This can be overridden for a specific entry by
right-clicking in the Notes field.
[1533621, 1722481] There's a new, "Browse+" action that combines
browsing to an entry's URL and entering the username, password,
etc. in a single operation. Note that this does not work (yet) for all
browsers and all sites. See help for details.
[1405326] Add new field 'Run Command' to allow arbitrary commands,