@@ -706,4 +706,5 @@ STRINGTABLE
 BEGIN
   IDS_TREEFONT             "Set Tree/List display font"
   IDS_PSWDFONT             "Set Password display font"
+  IDS_DRAGTOCOPY           "Dragbar: Hold left mouse button down on selected picture and drag to, say, a field on a web page. On releasing the mouse button, the particular contents (Group, Title, Username, Password, Notes or URL) will be pasted into that field."
 END
