@@ -530,4 +530,4 @@
 #define IDS_OSK_NO_UNICODE_FONT         5694
 #define IDS_ENTRYEXISTS1                5695
 #define IDS_ENTRYEXISTS3                5696
-
+#define IDS_DRAGTOCOPY                  5697
