@@ -30,6 +30,7 @@ New Features for 3.17.2
 =======================
 [2793280] Browse+Autotype added to allowed double click actions.
 [] Implement Virtual Keyboards for pass-phrase entry.
+[] DragBar now has ToolTips to inform user of its use.
 
 Bugs fixed in 3.17.1
 ====================
